tests/reject/match_wildcard_not_last.ty
# `_` wildcard must be the last match arm (an arm after it is unreachable, and the
# Option/Result codegen emits uncompilable C). Both compilers must reject.
enum Color:
    Red
    Green
    Blue

fn main():
    c := Green
    match c:
        Red: println("red")
        _: println("other")
        Green: println("green")
